# Virtual-FloriBot4.0

./: .gitmodules  README.md
dockerfiles/Task1/: Dockerfile
dockerfiles/Task2/: Dockerfile
src/base/: CMakeLists.txt  package.xml
src/base/launch/: base_node.launch
src/base/msg/: Angle.msg  Wheels.msg
src/base2gazebo/: CMakeLists.txt  package.xml
src/baumer_radar/: CMakeLists.txt  package.xml
src/baumer_radar_msgs/: CMakeLists.txt  package.xml
src/can_driver/: CMakeLists.txt  Can-Init  package.xml
src/floribot_simulation/: CMakeLists.txt  package.xml
src/floribot_simulation/cmake/: urdf_sim_tutorialConfig.cmake
src/floribot_simulation/config/: joints.yaml
src/floribot_simulation/launch/: FloriBot.launch  FloriBot4.0.launch  FloriBot_Docker_not_updated.launch  FloriBot_simulation_only.launch  floribot_parameter.yaml  key_teleop.launch
src/floribot_simulation/meshes/: Anschluss_Item_negativ.stl  Anschluss_Item_positiv.stl  Hinterwagen.stl  Kardangelenk.stl  Reifen.stl  Vorderwagen.stl
src/floribot_simulation/rviz/: mit_laser.rviz  urdf.rviz
src/floribot_simulation/urdf/: Floribot_radical-reduced.urdf.xacro  Floribot_reduced.urdf.xacro  Floribot_reduced_with_cam.urdf.xacro
src/maize_navigation/: CMakeLists.txt  package.xml
src/obstacle/: CMakeLists.txt  Task3_Val7_live_new.py  Task3_Val8 (Kopie).py  Task3_Val8.py  obstacle.py  package.xml
src/path_planning/: CMakeLists.txt  package.xml
src/scan_tools/: CMakeLists.txt  package.xml
src/spray/: CMakeLists.txt  package.xml
src/spray/src/: spray.py  (+1 more)
src/visu/: CMakeLists.txt  package.xml
(+61 files in other folders)
